--- a/src/qudi/gui/apd/ui_slow_counter.ui
+++ b/src/qudi/gui/apd/ui_slow_counter.ui
@@ -6,119 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>506</width>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>qudi: Slow Counter</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <widget class="QDockWidget" name="trace_selection_DockWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>421</width>
-      <height>109</height>
-     </rect>
-    </property>
-    <property name="floating">
-     <bool>true</bool>
-    </property>
-    <property name="windowTitle">
-     <string>Trace Selection</string>
-    </property>
-    <widget class="QWidget" name="dockWidgetContents_3">
-     <widget class="QWidget" name="horizontalLayoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>-1</x>
-        <y>0</y>
-        <width>421</width>
-        <height>109</height>
-       </rect>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QCheckBox" name="trace_1_checkbox">
-         <property name="text">
-          <string>Trace 1</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="trace_2_checkbox">
-         <property name="text">
-          <string>Trace 2</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="trace_3_checkbox">
-         <property name="text">
-          <string>Trace 3</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="trace_4_checkbox">
-         <property name="text">
-          <string>Trace 4</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QLabel" name="show_couts_label">
-           <property name="text">
-            <string>Show counts from:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="trace_1_radiobutton">
-           <property name="text">
-            <string>Trace 1</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="trace_2_radiobutton">
-           <property name="text">
-            <string>Trace 2</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="trace_3_radiobutton">
-           <property name="text">
-            <string>Trace 3</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="trace_4_radiobutton">
-           <property name="text">
-            <string>Trace 4</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-   </widget>
-  </widget>
+  <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>18</height>
+     <width>506</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuView">
@@ -296,7 +198,8 @@ Timestamps in oversampling interval are all equal to the averaging time.</string
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../../artwork/icons/qudiTheme/22x22/start-counter.png</normaloff>../../artwork/icons/qudiTheme/22x22/start-counter.png</iconset>
+     <normaloff>../../../../.venv/Lib/site-packages/qudi/artwork/icons/start-counter.svg</normaloff>
+     <normalon>../../../../.venv/Lib/site-packages/qudi/artwork/icons/stop-counter.svg</normalon>../../../../.venv/Lib/site-packages/qudi/artwork/icons/start-counter.svg</iconset>
    </property>
    <property name="text">
     <string>Start counter</string>
@@ -311,7 +214,8 @@ Timestamps in oversampling interval are all equal to the averaging time.</string
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>../../artwork/icons/qudiTheme/22x22/record-counter.png</normaloff>../../artwork/icons/qudiTheme/22x22/record-counter.png</iconset>
+     <normaloff>../../../../.venv/Lib/site-packages/qudi/artwork/icons/record-counter.svgz</normaloff>
+     <normalon>../../../../.venv/Lib/site-packages/qudi/artwork/icons/stop-counter.svg</normalon>../../../../.venv/Lib/site-packages/qudi/artwork/icons/record-counter.svgz</iconset>
    </property>
    <property name="text">
     <string>Record counts</string>
@@ -494,38 +398,6 @@ Timestamps in oversampling interval are all equal to the averaging time.</string
     <hint type="destinationlabel">
      <x>399</x>
      <y>299</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>trace_selection_view_Action</sender>
-   <signal>triggered(bool)</signal>
-   <receiver>trace_selection_DockWidget</receiver>
-   <slot>setVisible(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>39</x>
-     <y>463</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>trace_selection_DockWidget</sender>
-   <signal>visibilityChanged(bool)</signal>
-   <receiver>trace_selection_view_Action</receiver>
-   <slot>setChecked(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>39</x>
-     <y>463</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>-1</x>
-     <y>-1</y>
     </hint>
    </hints>
   </connection>
